...
            ),
          ),
        ),
        const SizedBox(height: Spacing.xl),
        Text(
          isCustomers
              ? 'قاعدة بيانات العملاء جاهزة'
              : 'سجل الفواتير الذكي منظم',
          style: AppTextStyles.titleMedium.copyWith(
            fontWeight: FontWeight.bold,
            color: AppColors.primary,
          ),
          textAlign: TextAlign.center,
        ),
...
